+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.6.5
==========================

*Release date: XX-XXX-20XX*

Core and Builtins
-----------------

- Issue #7413: Passing '\0' as the separator to datetime.datetime.isoformat()
  used to drop the time part of the result.

- Issue #6108: unicode(exception) and str(exception) should return the same
  message when only __str__ (and not __unicode__) is overridden in the subclass.

- Issue #7491: Metaclass's __cmp__ method was ignored.

- Add Py3k warnings for parameter names in parenthesis.

- Issue #7362: Give a proper error message for def f((x)=3): pass.

- Issue #7085: Fix crash when importing some extensions in a thread
  on MacOSX 10.6.

- Issue #7070: Fix round bug for large odd integer arguments.

- Issue #7078: Set struct.__doc__ from _struct.__doc__.

- Issue #1722344: threading._shutdown() is now called in Py_Finalize(), which
  fixes the problem of some exceptions being thrown at shutdown when the
  interpreter is killed. Patch by Adam Olsen.

- Issue #7084: Fix a (very unlikely) crash when printing a list from one
  thread, and mutating it from another one.  Patch by Scott Dial.

- Issue #1747858: Fix lchown & fchown to work with large uid's and gid's on
  64-bit platforms.


Library
-------

- Issue #7552: Removed line feed in the base64 Authorization header in
  the Distutils upload command to avoid an error when PyPI reads it.
  This occurs on long passwords. Initial patch by JP St. Pierre.

- Issue #7231: urllib2 cannot handle https with proxy requiring auth. Patch by
  Tatsuhiro Tsujikawa.

- Issue #7348: StringIO.StringIO.readline(-1) now acts as if it got no argument
  like other file objects.

- Issue #5949: fixed IMAP4_SSL hang when the IMAP server response is
  missing proper end-of-line termination.

- Fix variations of extending deques:  d.extend(d)  d.extendleft(d)  d+=d
